Codigo Ejemplo/1. Principios Universales de Diseño Software/1.1. Encapsula lo que varia/CostoTotalDePedido/src/main/java/org/example/bad/TaxCalcuator.java
package org.example.bad;

public class TaxCalcuator {


    public static double calcularImpuesto(double total){

        return 0;

    }
}
